--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -19,3 +19,8 @@ nav .brand-big a img {
     background-color: #f97c0b;
     border-color: #f97c0b;
 }
+
+.row {
+    margin-right: unset;
+    margin-left: unset;
+}
